refactor(gameplay): 방정보 메세지 발송 계층 분리